--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+
+
+.app {
+  height: 10em;
+  width: 10em;
+  background: lightblue;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.modal {
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes enterHeader {
   from {
-    transform: rotate(0deg);
+    margin-left: -300%;
   }
   to {
-    transform: rotate(360deg);
+    margin-left: 0%;
   }
+}
+
+.modalHeader{
+  color: red;
+
+  -moz-animation-name: enterHeader;
+  -webkit-animation-name: enterHeader;
+  animation-name: enterHeader;
+
+  -moz-animation-duration: 3s;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+}
+
+@keyframes enterSnowman {
+  from {
+    margin-left: 300%;
+  }
+  to {
+    margin-left: 0%;
+  }
+}
+
+img {
+  height: 50vh;
+  width: auto;
+  background: transparent;
+
+  -moz-animation-name: enterSnowman;
+  -webkit-animation-name: enterSnowman;
+  animation-name: enterSnowman;
+
+  -moz-animation-duration: 3s;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
 }
